@@ -30,3 +30,4 @@ Bug fixes
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - Updated import step dependency to work with CMF 1.6.3
+- Added a module method and an external method reorderContainterContents.
